# CRI-chatbot

./: .env.example  .env.prod.example  .gitattributes  .gitignore  CLAUDE.md  README.md  docker-compose.prod-api.yml  docker-compose.prod-data.yml  docker-compose.prod-front.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  skills-lock.json
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 2026_03_25_0001-001_create_tenants_table.py  2026_03_25_0002-002_create_phase1_tables.py  2026_03_26_0003-003_create_incitation_tables.py  2026_03_27_0004-004_create_campaigns.py  2026_03_27_0005-005_create_escalations.py  2026_03_27_0006-006_create_internal_whitelist.py  2026_03_29_0007-007_create_audit_logs.py  2026_03_29_0008-008_create_tenant_keys.py  2026_04_01_0009-009_create_phase3_dossier_tables.py
backend/app/: main.py
backend/app/core/: arq.py  audit_middleware.py  config.py  database.py  exceptions.py  logging.py  metrics.py  middleware.py  minio.py  qdrant.py  rbac.py  redis.py  tenant.py
backend/app/models/: __init__.py  admin.py  audit.py  kb.py  (+13 more)
backend/scripts/: apply_audit_policy.sql
backend/tests/: conftest.py  conftest_phase2.py  conftest_phase3.py  test_api_auth.py  test_api_contacts.py  test_api_dashboard.py  test_api_dossiers.py  test_api_kb.py  test_api_notifications.py  test_api_tenant.py  test_archive_worker.py  test_audit.py  test_auth_service.py  test_campaign.py  test_campaign_service.py  test_campaigns_api.py  test_contacts_crm.py  test_contacts_p2.py  test_dossier_import.py  test_dossier_service.py  test_e2e_flow.py  test_e2e_phase2.py  test_e2e_phase3.py  test_embedding_service.py  test_escalation.py  test_escalation_api.py  test_escalation_service.py  test_escalation_ws.py  test_faq_agent.py  test_feedback_service.py  test_gemini_service.py  test_health.py  test_incentives_agent.py  test_incentives_service.py  test_input_guard.py  test_intent_detector.py  test_internal.py  test_internal_service.py  test_kms.py  test_language_detection.py  (+33 more)
(+381 files in other folders)
