[project]
name = "cri-chatbot-platform"
version = "0.1.0"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["E501", "B008", "N806"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
warn_return_any = false
disable_error_code = ["arg-type", "return-value", "assignment", "union-attr", "attr-defined", "operator", "index", "misc"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
markers = [
    "security: OWASP security penetration tests",
    "owasp_a01: A01:2021 Broken Access Control",
    "owasp_a02: A02:2021 Cryptographic Failures",
    "owasp_a03: A03:2021 Injection",
    "owasp_a04: A04:2021 Insecure Design",
    "owasp_a05: A05:2021 Security Misconfiguration",
    "owasp_a07: A07:2021 Identification and Authentication Failures",
    "owasp_a09: A09:2021 Security Logging and Monitoring Failures",
    "unit: Pure unit tests (no I/O, all mocked)",
    "phase3: Phase 3 dossier tracking module tests",
    "e2e: End-to-end integration tests",
]
